--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "freighthub-frontend-challenge",
+  "name": "liquidity-challenge",
   "version": "1.0.0",
   "description": "FreightHub Frontend Coding Challenge",
   "main": "index.js",
@@ -12,18 +12,18 @@
     "build": "rimraf ./dist/* && webpack --mode production --config webpack.config.prod.js",
     "lint": "esw webpack.config.* src --color",
     "lint:watch": "npm run lint -- --watch",
-    "start": "npm-run-all --parallel server build:watch lint:watch",
+    "start": "nodemon server.js",
+    "start:dev": "npm-run-all --parallel server build:watch lint:watch",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "json-server": "^0.14.2",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
-    "compression-webpack-plugin": "1.1.11",
+    "compression-webpack-plugin": "^1.1.11",
     "css-loader": "^3.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.1",
@@ -33,9 +33,11 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-watch": "^6.0.0",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "json-server": "^0.14.2",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
@@ -46,7 +48,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "style-loader": "^1.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2",
